--- a/styles.css
+++ b/styles.css
@@ -19,55 +19,93 @@
     color: greenyellow;
 }
 
-/* #parents {
-    width: 350px;
-    height: 200px;
-    top: 50vh;
-    margin: 0 auto;
-    position: relative;
-    /* overflow: hidden; */
-
-
+/* ----- プチシェリー ------- */
 /* #wrapper {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin: auto;
-    border: 10px solid slateblue;
-    justify-content: space-between;
+    width: 300px;
+    height: 300px;
+    margin: 100px auto;
     position: relative;
-}
-
-.items {
-    width: 30px;
-    height: 30px;
-    background-color: white;
-    margin: auto;
-    position: absolute;
-    transform: rotate(-30deg);
-    top: 40px;
-} */
-
-
-#wrapper {
-    width: 250px;
-    height: 200px;
-    margin: 30px auto;
-    display: block;
-    overflow: hidden;
-
 }
 
 .items1 {
-    width: 30px;
-    height: 30px;
-    background-color: pink;
-    margin: 40px auto;
+    width: 86px;
+    height: 86px;
+    border: 2px solid;
+    border-radius: 50%;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .items2 {
-    width: 30px;
-    height: 30px;
-    background-color: pink;
+    width: 96px;
+    height: 96px;
+    background-color: #FDF5E6;
+    border-radius: 50%;
+    position: absolute;
     margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+} */
+
+/* --------- ビターオレンジ ------------
+#wrapper {
+    width: 300px;
+    height: 300px;
+    margin: 100px auto;
+    position: relative;
+}
+
+.items1 {
+    width: 0;
+    height: 0;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 60px 103.9px 60px;
+    border-color: transparent transparent orange transparent;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.items2 {
+    width: 170px;
+    height: 170px;
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+} */
+
+#wrapper {
+    width: 300px;
+    height: 300px;
+    margin: 100px auto;
+    position: relative;
+}
+
+.items1 {
+    width: 85px;
+    height: 85px;
+    background-color: plum;
+    position: absolute;
+    margin: 50px auto;
+    text-align: center;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
