--- a/styles.css
+++ b/styles.css
@@ -19,39 +19,6 @@
     color: greenyellow;
 }
 
-/* ----- プチシェリー ------- */
-/* #wrapper {
-    width: 300px;
-    height: 300px;
-    margin: 100px auto;
-    position: relative;
-}
-
-.items1 {
-    width: 86px;
-    height: 86px;
-    border: 2px solid;
-    border-radius: 50%;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-
-.items2 {
-    width: 96px;
-    height: 96px;
-    background-color: #FDF5E6;
-    border-radius: 50%;
-    position: absolute;
-    margin: auto;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-} */
 
 /* --------- ビターオレンジ ------------
 #wrapper {
@@ -90,7 +57,7 @@
     bottom: 0;
 } */
 
-#wrapper {
+/* #wrapper {
     width: 300px;
     height: 300px;
     margin: 100px auto;
@@ -108,4 +75,98 @@
     left: 0;
     right: 0;
     bottom: 0;
+} */
+
+body {
+    background-color: #3D3D3D;
+
+}
+
+#color {
+    display: flex;
+    justify-content: center;
+}
+
+#red {
+    width: 80px;
+    height: 80px;
+    background-color: #ff3838;
+}
+
+#pink {
+    width: 80px;
+    height: 80px;
+    background-color: #ffb8b8;
+}
+
+#parple {
+    width: 80px;
+    height: 80px;
+    background-color: #c56cf0;
+}
+
+#parpleblue {
+    width: 80px;
+    height: 80px;
+    background-color: #7158e2;
+}
+
+#blue {
+    width: 80px;
+    height: 80px;
+    background-color: #17c0eb;
+}
+
+#lightblue {
+    width: 80px;
+    height: 80px;
+    background-color: #67e6dc;
+}
+
+#green {
+    width: 80px;
+    height: 80px;
+    background-color: #3ae374;
+}
+
+#yellow {
+    width: 80px;
+    height: 80px;
+    background-color: #fff200;
+}
+
+#orange {
+    width: 80px;
+    height: 80px;
+    background-color: #ff9f1a;
+}
+
+#wrapper {
+    position: relative;
+    /* display: flex; */
+    width: 172px;
+    height: 172px;
+    margin: 150px auto;
+    background-color: #fff;
+}
+
+/* .items {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    margin: auto;
+} */
+
+.items {
+    position: absolute;
+    margin: 0 auto;
+    width: 25px;
+    height: 25px;
+    color: blue;
+    font-size: 25px;
 }
